<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.LogInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#BDBDBD"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Firefox"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_editext_login"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/ic_account"
            android:ems="10"
            android:hint="@string/txt_username"
            android:inputType="textPersonName"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_editext_login"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_login"
            android:text="@string/txt_login"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvNewAccount"
            android:layout_width="125dp"
            android:layout_height="23dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_create_new_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvNewAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>