<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context=".view.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Sign Up"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_editext_login"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="14dp"
        android:drawableStart="@drawable/ic_account"
        android:ems="10"
        android:hint="@string/txt_username"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_editext_login"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="14dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/txt_sign_up"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_arrow_left_black_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_arrow_left_black_24dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/txt_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
</android.support.constraint.ConstraintLayout>